// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`$gt MySQL Behaviour Comparing JSON numbers values is numberic: SQL Query for filter: {"settings.age":{"$gt":-9}} 1`] = `
{
  "params": [
    -9,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING UNSIGNED ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing JSON numbers values is numberic: SQL Query for filter: {"settings.age":{"$gt":0}} 1`] = `
{
  "params": [
    0,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING UNSIGNED ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing JSON numbers values is numberic: SQL Query for filter: {"settings.age":{"$gt":1}} 1`] = `
{
  "params": [
    1,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING UNSIGNED ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing JSON numbers values is numberic: SQL Query for filter: {"settings.age":{"$gt":9}} 1`] = `
{
  "params": [
    9,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING UNSIGNED ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing JSON numbers values is numberic: SQL Query for not match filter: {"settings.age":{"$gt":10}} 1`] = `
{
  "params": [
    10,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING UNSIGNED ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing JSON numbers values is numberic: SQL Query for not match filter: {"settings.age":{"$gt":12}} 1`] = `
{
  "params": [
    12,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING UNSIGNED ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing JSON numbers values is numberic: SQL Query for not match filter: {"settings.age":{"$gt":20}} 1`] = `
{
  "params": [
    20,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING UNSIGNED ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing JSON string values is case insensitive: SQL Query for filter: {"settings.name":{"$gt":"Alic"}} 1`] = `
{
  "params": [
    "alic",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing JSON string values is case insensitive: SQL Query for filter: {"settings.name":{"$gt":"a"}} 1`] = `
{
  "params": [
    "a",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing JSON string values is case insensitive: SQL Query for filter: {"settings.name":{"$gt":"alic"}} 1`] = `
{
  "params": [
    "alic",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing JSON string values is case insensitive: SQL Query for not match filter: {"settings.name":{"$gt":"ALICE"}} 1`] = `
{
  "params": [
    "alice",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing JSON string values is case insensitive: SQL Query for not match filter: {"settings.name":{"$gt":"Alice"}} 1`] = `
{
  "params": [
    "alice",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing JSON string values is case insensitive: SQL Query for not match filter: {"settings.name":{"$gt":"aLice"}} 1`] = `
{
  "params": [
    "alice",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing JSON string values is case insensitive: SQL Query for not match filter: {"settings.name":{"$gt":"alice"}} 1`] = `
{
  "params": [
    "alice",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing JSON string values is case insensitive: SQL Query for not match filter: {"settings.name":{"$gt":"b"}} 1`] = `
{
  "params": [
    "b",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing numbers values is numberic: SQL Query for filter: {"age":{"$gt":-9}} 1`] = `
{
  "params": [
    -9,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`age\` > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing numbers values is numberic: SQL Query for filter: {"age":{"$gt":0}} 1`] = `
{
  "params": [
    0,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`age\` > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing numbers values is numberic: SQL Query for filter: {"age":{"$gt":1}} 1`] = `
{
  "params": [
    1,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`age\` > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing numbers values is numberic: SQL Query for filter: {"age":{"$gt":9}} 1`] = `
{
  "params": [
    9,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`age\` > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing numbers values is numberic: SQL Query for not match filter: {"age":{"$gt":10}} 1`] = `
{
  "params": [
    10,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`age\` > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing numbers values is numberic: SQL Query for not match filter: {"age":{"$gt":12}} 1`] = `
{
  "params": [
    12,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`age\` > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing numbers values is numberic: SQL Query for not match filter: {"age":{"$gt":20}} 1`] = `
{
  "params": [
    20,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`age\` > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing string values is case insensitive: SQL Query for filter: {"name":{"$gt":"Alic"}} 1`] = `
{
  "params": [
    "alic",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing string values is case insensitive: SQL Query for filter: {"name":{"$gt":"a"}} 1`] = `
{
  "params": [
    "a",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing string values is case insensitive: SQL Query for filter: {"name":{"$gt":"alic"}} 1`] = `
{
  "params": [
    "alic",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing string values is case insensitive: SQL Query for not match filter: {"name":{"$gt":"ALICE"}} 1`] = `
{
  "params": [
    "alice",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing string values is case insensitive: SQL Query for not match filter: {"name":{"$gt":"Alice"}} 1`] = `
{
  "params": [
    "alice",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing string values is case insensitive: SQL Query for not match filter: {"name":{"$gt":"aLice"}} 1`] = `
{
  "params": [
    "alice",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing string values is case insensitive: SQL Query for not match filter: {"name":{"$gt":"alice"}} 1`] = `
{
  "params": [
    "alice",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt MySQL Behaviour Comparing string values is case insensitive: SQL Query for not match filter: {"name":{"$gt":"b"}} 1`] = `
{
  "params": [
    "b",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt MySQL Behaviour NULL values are always the smallest for JSON numbers: SQL Query for not match filter: {"settings.age":{"$gt":-1000}} 1`] = `
{
  "params": [
    -1000,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING UNSIGNED ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour NULL values are always the smallest for JSON numbers: SQL Query for not match filter: {"settings.age":{"$gt":0}} 1`] = `
{
  "params": [
    0,
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING UNSIGNED ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour NULL values are always the smallest for JSON numbers: SQL Query for not match filter: {"settings.age":{"$gt":null}} 1`] = `
{
  "params": [],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.age" RETURNING UNSIGNED ERROR ON ERROR) IS NOT NULL",
}
`;

exports[`$gt MySQL Behaviour NULL values are always the smallest for JSON strings: SQL Query for not match filter: {"settings.name":{"$gt":""}} 1`] = `
{
  "params": [
    "",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour NULL values are always the smallest for JSON strings: SQL Query for not match filter: {"settings.name":{"$gt":"aaaa"}} 1`] = `
{
  "params": [
    "aaaa",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 ERROR ON ERROR) > ?",
}
`;

exports[`$gt MySQL Behaviour NULL values are always the smallest for JSON strings: SQL Query for not match filter: {"settings.name":{"$gt":null}} 1`] = `
{
  "params": [],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE JSON_VALUE(\`test_table\`.\`settings\`,"$.name" RETURNING CHAR CHARACTER SET utf8mb4 ERROR ON ERROR) IS NOT NULL",
}
`;

exports[`$gt MySQL Behaviour NULL values are always the smallest for strings: SQL Query for not match filter: {"name":{"$gt":""}} 1`] = `
{
  "params": [
    "",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt MySQL Behaviour NULL values are always the smallest for strings: SQL Query for not match filter: {"name":{"$gt":"aaaa"}} 1`] = `
{
  "params": [
    "aaaa",
  ],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` > ?",
}
`;

exports[`$gt MySQL Behaviour NULL values are always the smallest for strings: SQL Query for not match filter: {"name":{"$gt":null}} 1`] = `
{
  "params": [],
  "query": "SELECT \`test_table\`.* FROM \`test_table\` WHERE \`test_table\`.\`name\` IS NOT NULL",
}
`;
